crates/contextdb-core/tests/fixtures/compile_fail/snapshotid_into_wallclock.rs
use contextdb_core::{SnapshotId, Wallclock};

fn main() {
    let s = SnapshotId(1);
    let _w: Wallclock = s;
}
